修改文件: 滑动窗口刷题记录.md

--- a/滑动窗口刷题记录.md
+++ b/滑动窗口刷题记录.md
@@ -1,7 +1,8 @@
 
 
 
-水果成蓝
+**leetcode 水果成蓝**
+
 题解：
 1.通过找到子数组只包含两种果树类型，其判断标准就是找到第三个不同的果树类型
 2.这时，第三中果树类型位置的左边的果树类型就为第一种果树类型，第三种果树类型就为第二种果树类型，然后一个向左，一个向右继续判断只包含这两种果树类型的子数组
@@ -39,7 +40,7 @@ class Solution(object):
         return max(max_fruit, right - left)
 ~~~
 
-无重复字符的最长子串
+**leetcode 无重复字符的最长子串**
 题解：
 滑动窗口
 重点：判断窗口向左滑动的条件并找到该位置
@@ -66,7 +67,7 @@ class Solution(object):
 ~~~
 
 
-替换后的最长重复字串
+**leetcode 替换后的最长重复字串**
 题解：
 滑动窗口
 重点：判断窗口向左滑动的条件以及滑动的距离
@@ -111,7 +112,7 @@ class Solution(object):
             #print("max_char:{0} left:{1} right:{2}".format(max_char, left, right))
         return max_replace_substr
 ~~~
-乘积小于k的子数组
+**leetcode 乘积小于k的子数组**
 题解:
 双指针
 通过判断left到right之间的乘积是否小于k，如果小于则计算目前这个的子数组，并将right向右移动一下。反之则将left向右移动到乘积小于K的位置，并计算子数组的个数。重复上面的操作。
