修改文件: 链表反转刷题记录.md

--- a/链表反转刷题记录.md
+++ b/链表反转刷题记录.md
@@ -63,5 +63,44 @@ class Solution(object):
         linklist[0].next = None
         return linklist[len(linklist)-1]
 ~~~
-		
+**反转链表II**
+
+题解：
+跟上面类似，只是需要根据链表具体的位置判断
+~~~
+class Solution(object):
+    def reverseBetween(self, head, left, right):
+        """
+        :type head: ListNode
+        :type left: int
+        :type right: int
+        :rtype: ListNode
+        """
+        p_head = head
+        if p_head == None:
+            return p_head
+
+        link_cur_pos = 1
+        pre = head
+        cur = head
+        while(link_cur_pos < left and p_head != None):
+            pre = p_head
+            p_head = p_head.next
+            link_cur_pos += 1
+        cur = p_head
+        left_node = p_head
+        while(link_cur_pos <= right and p_head != None):
+            tmp = p_head.next
+            p_head.next = left_node
+            left_node = p_head
+            p_head = tmp
+            link_cur_pos += 1
+        if left == 1:
+            pre.next = p_head
+            return left_node
+        pre.next = left_node
+        cur.next = p_head
+        return head
+~~~
+
 		
