修改文件: 链表反转刷题记录.md

--- a/链表反转刷题记录.md
+++ b/链表反转刷题记录.md
@@ -102,5 +102,34 @@ class Solution(object):
         cur.next = p_head
         return head
 ~~~
-
+k个一组翻转链表
+题解：
+将所有的链表节点放入list中，然后对每一个k组进行交换位置，最后再将他们连接到一起就可以了
+~~~
+class Solution(object):
+    def reverseKGroup(self, head, k):
+        """
+        :type head: ListNode
+        :type k: int
+        :rtype: ListNode
+        """
+        if head == None:
+            return head
+        p_head = head
+        list_node = []
+        while(p_head != None):
+            list_node.append(p_head)
+            p_head = p_head.next
+        count = len(list_node)/k
+        for i in range(0, count):
+            left = i * k
+            right = (i + 1) * k
+            for j in range(left, right-k/2):
+                tmp = list_node[j]
+                list_node[j] = list_node[right + left - j - 1]
+                list_node[right + left - j - 1] = tmp
+        for i in range(0, len(list_node) - 1):
+            list_node[i].next = list_node[i + 1]
+        list_node[len(list_node) - 1].next = None
+        return list_node[0]
 		
