修改文件: 二叉树刷题记录.md

--- a/二叉树刷题记录.md
+++ b/二叉树刷题记录.md
@@ -109,5 +109,61 @@ class Solution(object):
         return list(reversed(list_node))
 ~~~
 **路径总和**
+
 题解：
-通过使用DFS
+通过使用DFS遍历二叉树，通过算出每一个节点到根节点的和，然后判断叶子节点的总和是否满足目标
+~~~
+class Solution(object):
+    def travel_tree_sum(self, root, tree_sum, targetSum):
+        if root == None:
+            return False
+        tree_sum = tree_sum + root.val
+        if root.left == None and root.right == None:
+            if tree_sum == targetSum :
+                return True
+        left_res = self.travel_tree_sum(root.left, tree_sum, targetSum)
+        right_res = self.travel_tree_sum(root.right, tree_sum, targetSum)
+        return (left_res or right_res)
+        
+    def hasPathSum(self, root, targetSum):
+        """
+        :type root: TreeNode
+        :type targetSum: int
+        :rtype: bool
+        """
+        tree_sum = 0
+        if root == None:
+            return False
+        return self.travel_tree_sum(root, tree_sum, targetSum)
+~~~
+**路径总和**
+
+题解：依旧根据上面的DFS遍历，只是在每一次遍历的时候将元素保存起来，然后两个子节点遍历之后将该元素弹出。
+~~~
+class Solution(object):
+    def travel_tree_sum(self, root, tree_sum, targetSum, tmp, result):
+        if root != None:
+            tree_sum = tree_sum + root.val
+            tmp.append(root.val)
+            if root.left == None and root.right == None:
+                if tree_sum == targetSum :
+                    result.append(tmp[:])
+            else:
+                self.travel_tree_sum(root.left, tree_sum, targetSum, tmp, result)
+                self.travel_tree_sum(root.right, tree_sum, targetSum, tmp, result)
+            tmp.pop()
+
+    def pathSum(self, root, targetSum):
+        """
+        :type root: TreeNode
+        :type targetSum: int
+        :rtype: List[List[int]]
+        """
+        tree_sum = 0
+        if root == None:
+            return []
+        tmp = []
+        result = []
+        self.travel_tree_sum(root, tree_sum, targetSum, tmp, result)
+        return result
+~~~
