修改文件: 二叉树刷题记录.md

--- a/二叉树刷题记录.md
+++ b/二叉树刷题记录.md
@@ -136,7 +136,7 @@ class Solution(object):
             return False
         return self.travel_tree_sum(root, tree_sum, targetSum)
 ~~~
-**路径总和**
+**路径总和II**
 
 题解：依旧根据上面的DFS遍历，只是在每一次遍历的时候将元素保存起来，然后两个子节点遍历之后将该元素弹出。
 ~~~
@@ -166,4 +166,36 @@ class Solution(object):
         result = []
         self.travel_tree_sum(root, tree_sum, targetSum, tmp, result)
         return result
+~~~
+
+**路径总和III**
+
+题解：这个就是路径总和一的方法，只是在每一个节点上判断是否要从该节点计算，即每一个节点上判断是否将该节点当做根节点，如果当做就加上根节点的值，如果不当做，就不加。另外一个主要的点就是现在不是在叶子节点判断路径和，是需要在每一个节点上判断路径和是否满足要求。
+
+~~~
+class Solution(object):
+    def travel_tree_sum_root(self, root, tree_sum, targetSum):
+        if root == None:
+            return 0
+        tree_sum = tree_sum + root.val
+        tmp = 0
+        if tree_sum == targetSum :
+            tmp = tmp + 1
+        left_res = self.travel_tree_sum_root(root.left, tree_sum, targetSum)
+        right_res = self.travel_tree_sum_root(root.right, tree_sum, targetSum)
+        return left_res + right_res + tmp  
+    
+    def pathSum(self, root, targetSum):
+        """
+        :type root: TreeNode
+        :type targetSum: int
+        :rtype: List[List[int]]
+        """
+        tree_sum = 0
+        if root == None:
+            return 0
+        root_sum = self.travel_tree_sum_root(root, tree_sum, targetSum)
+        not_root_left = self.pathSum(root.left, targetSum)
+        not_root_right = self.pathSum(root.right, targetSum)
+        return root_sum + not_root_left + not_root_right
 ~~~
