--- a/二分查找刷题记录.md
+++ b/二分查找刷题记录.md
@@ -24,3 +24,31 @@ class Solution(object):
         return -1
 ~~~
 
+**最小绝对差**
+
+题解：
+数组排序，然后计算出两两之间的差值，将最小差值的组合添加进来即可。
+
+代码：
+~~~
+class Solution(object):
+    def minimumAbsDifference(self, arr):
+        """
+        :type arr: List[int]
+        :rtype: List[List[int]]
+        """
+        arr.sort()
+        len_arr = len(arr)
+        min_dif = 10000
+        result = []
+        for i in range(1, len_arr):
+            diff = arr[i] - arr[i-1]
+            if diff < min_dif:
+                min_dif = diff
+                result = []
+                result.append([arr[i-1], arr[i]])
+            elif diff == min_dif:
+                result.append([arr[i-1], arr[i]])
+        return result
+~~~
+
