修改文件: 快速排序与堆刷题记录.md

--- a/快速排序与堆刷题记录.md
+++ b/快速排序与堆刷题记录.md
@@ -174,3 +174,125 @@ class Solution(object):
             result.append(nums_key[i])
         return result
 ~~~
+
+**451根据字符出现频率排序**
+
+题解：跟上面思路一样的
+
+代码：
+~~~
+class Solution(object):
+    def quick_sort(self, s_key, s_count, left, right):
+        if left < right:
+            flag_count = s_count[left]
+            flag_key = s_key[left]
+            start = left
+            end = right
+            while(left < right):
+                while(left < right and flag_count < s_count[right]):
+                    right = right - 1
+                if left < right:
+                    s_count[left] = s_count[right]
+                    s_key[left] = s_key[right]
+                    left = left + 1
+                while(left < right and flag_count >s_count[left]):
+                    left =left + 1
+                if left < right:
+                    s_count[right] = s_count[left]
+                    s_key[right] = s_key[left]
+                    right = right -1
+            s_count[left] = flag_count
+            s_key[left] = flag_key
+            self.quick_sort(s_key, s_count, start, left-1)
+            self.quick_sort(s_key, s_count, left+1, end)
+
+    def frequencySort(self, s):
+        """
+        :type s: str
+        :rtype: str
+        """
+        dic_s = {}
+        for i in s:
+            if i in dic_s.keys():
+                dic_s[i] = dic_s[i] + 1
+            else:
+                dic_s[i] = 1
+        s_key = []
+        s_count = []
+        for key,value in dic_s.items():
+            s_key.append(key)
+            s_count.append(value)
+        #print(s_key)
+        #print(s_count)
+        self.quick_sort(s_key, s_count, 0, len(dic_s)-1)
+        #print(s_key)
+        #print(s_count)
+        result = ""
+        for i in range(len(s_count)-1, -1, -1):
+            result = result + s_key[i]*s_count[i]
+        return result
+~~~
+**703数据流中的第K大元素**
+
+题解：
+这题我们的解题思路是使用小顶堆，因为我们需要第k大元素，需要多次添加元素并获取第k大元素，如果只是单纯的使用大顶堆的话，我们需要删除K-1个元素后获取第K大元素，然后在将删除的元素添加进去这样，这样是不方便的，所以我们使用小顶堆，使得小顶堆中的元素只有K个，这样每次heap[0]元素就是我们所需要的第K大元素。
+
+每次插入元素有三种情况：
+1.堆中已经有k个元素了，并且堆顶元素大于插入元素：
+这时说明插入元素肯定不是前k大元素，这时就不用插入改元素了。
+2.堆中没有k个元素：
+这时我们需要将该元素添加到堆的末尾，然后对堆进行调整，从堆底开始调整，每次判断堆底元素与其父亲元素的大小比较，如果小于该父亲元素就将其交换，后面就重复该行为一直到堆顶。
+3.堆中已经有k个元素了，但是堆顶元素小于插入 元素：
+这时我们将堆顶元素修改为插入元素，然后从堆顶往下进行判断，首先找出堆顶元素的两个子元素中的最小值，然后拿其与堆顶元素进行比较，如果堆顶元素大于该元素，就将这两个元素进行交换，反之则直接结束。后面就重复上面行为一直到堆尾。
+
+代码：
+~~~
+
+class KthLargest(object):
+
+    def __init__(self, k, nums):
+        """
+        :type k: int
+        :type nums: List[int]
+        """
+        self.data = []
+        self.kth = k
+        for x in nums:
+            self.headpity(x)
+
+    def headpity(self, num):
+        if len(self.data) == self.kth and self.data[0] > num:
+            return self.data[0]
+        elif len(self.data) < self.kth:
+            self.data.append(num)
+            k = len(self.data) - 1
+            while(k):
+                parent = (k - 1)//2
+                if parent >= 0 and self.data[parent] > self.data[k]:
+                    self.data[parent], self.data[k] = self.data[k], self.data[parent]
+                    k = parent
+                else:
+                    return self.data[0]
+        else:
+            self.data[0] = num
+            parent = 0
+            while(parent*2+1 < len(self.data)):
+                k = parent*2 + 1
+                if k + 1<len(self.data) and self.data[k+1] < self.data[k]:
+                    k = k + 1
+                if self.data[parent] > self.data[k]:
+                    self.data[parent], self.data[k] = self.data[k], self.data[parent]
+                    parent = k
+                else:
+                    break
+
+    def add(self, val):
+        """
+        :type val: int
+        :rtype: int
+        """
+        self.headpity(val)
+        return self.data[0]
+~~~
+
+
