修改文件: 快速排序与堆刷题记录.md

--- a/快速排序与堆刷题记录.md
+++ b/快速排序与堆刷题记录.md
@@ -294,5 +294,34 @@ class KthLargest(object):
         self.headpity(val)
         return self.data[0]
 ~~~
+**658找到k个最接近的元素**
+
+题解：
+直接利用双指针去判断，每次判断左右指针那个更远离元素，就将该指针往中间移动，一直到左右指针的区间长度等于k即可。
+
+代码：
+~~~
+class Solution(object):
+    def findClosestElements(self, arr, k, x):
+        """
+        :type arr: List[int]
+        :type k: int
+        :type x: int
+        :rtype: List[int]
+        """
+        left = 0
+        right = len(arr) - 1
+        while(right - left > k - 1):
+            right_abs = abs(arr[right] - x)
+            left_abs = abs(arr[left] - x)
+            if right_abs > left_abs:
+                right = right - 1
+            elif right_abs < left_abs:
+                left = left + 1
+            else:
+                right = right -1
+        return arr[left:right+1]
+~~~
+
 
 
